Update BaseTest.java